feat: save quiz to db
